--- a/static/css/theme-override.css
+++ b/static/css/theme-override.css
@@ -1,6 +1,14 @@
 footer { font-size: 90%; font-family: monospace; }
 
 body {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: .5em;
+  padding-right: .5em;
+}
+
+header {
+  padding: 0px;
+}
+
+footer {
+  padding-bottom: 15px;
 }
