changed the header

--- a/static/css/theme-override.css
+++ b/static/css/theme-override.css
@@ -6,9 +6,18 @@ body {
 }
 
 header {
-  padding: 0px;
+  background: rgb(51, 51, 51);
 }
 
 footer {
   padding-bottom: 15px;
+}
+
+#blog-logo {
+  background: #ffffff;
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  line-height: 1.75rem;
+  padding: 0 0.5rem;
+  font-weight: bold;
 }
